# snowball-creations

./: .gitignore  Pipfile  Procfile  pyproject.toml  requirements.txt
sc_app/: Procfile  db.sqlite3  manage.py
sc_app/client_base/: apps.py  urls.py  views.py
sc_app/dashboard/: admin.py  models.py  urls.py  views.py
sc_app/dashboard/migrations/: 0001_initial.py  0002_auto_20200530_0757.py  0003_auto_20200603_0441.py  0004_auto_20200603_0522.py  0005_auto_20200603_0525.py  0006_auto_20200603_0526.py  0007_auto_20200603_0532.py  0008_auto_20200603_0537.py  0009_auto_20200603_0552.py  0010_auto_20200603_0555.py  0011_subscription_name.py  0012_remove_subscription_name.py  0013_auto_20200603_0606.py  0014_auto_20200603_0608.py  0015_company_tertiary_contact.py  0016_auto_20200603_0643.py  0017_auto_20200604_0619.py  0018_auto_20200604_0623.py  0019_auto_20200612_0905.py  0020_auto_20200612_0952.py  0021_auto_20200614_1222.py  0022_auto_20200616_1002.py  0023_subscription_company_using.py  0024_remove_subscription_company_using.py  0025_company_created_at.py  0026_auto_20200619_1920.py  0027_auto_20200623_0729.py  0028_company_created_at.py  0029_auto_20200624_0648.py  0030_auto_20200624_0935.py
sc_app/sc_app/: asgi.py  settings.py  urls.py  wsgi.py
sc_app/static/dashboard/: mystyle.css
sc_app/templates/: base.html  footer.html  navbar.html
sc_app/templates/client_base/: client_list.html
sc_app/templates/dashboard/: dashboard.html  index.html
sc_app/users/: forms.py  models.py  urls.py  views.py
sc_app/users/migrations/: 0001_initial.py  (+4 more)
(+6 files in other folders)
