[tool.poetry]
name = "snowball-creations"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
django = "^3.0.7"
django-money = "^1.1"
gunicorn = "^20.0.4"
whitenoise = "^5.1.0"
django-crispy-forms = "^1.9.1"
pillow = "^7.1.2"
django-heroku = "^0.3.1"
boto3 = "^1.14.9"
django-storages = "^1.9.1"

[tool.poetry.dev-dependencies]
black = "^19.10b0"
flake8 = "^3.8.3"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
